// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonIcon snapshots should render ButtonIcon 1`] = `
<DocumentFragment>
  <div
    class="css-wcnq0t ButtonIcon ButtonIcon--light"
    data-test-button-icon=""
  >
    <div
      class="css-wcnq0t Icon Icon--light Icon--neutral1 Icon--neutral1--light"
      data-test-icon="close"
      height="14"
      name="Close"
      width="14"
    />
  </div>
</DocumentFragment>
`;

exports[`ButtonIcon snapshots should render when is selected 1`] = `
<DocumentFragment>
  <div
    class="css-wcnq0t ButtonIcon ButtonIcon--light ButtonIcon--selected ButtonIcon--selected--light"
    data-test-button-icon=""
  >
    <div
      class="css-wcnq0t Icon Icon--light Icon--blue1 Icon--blue1--light"
      data-test-icon="close"
      height="14"
      name="Close"
      width="14"
    />
  </div>
</DocumentFragment>
`;
